--- a/pom.xml
+++ b/pom.xml
@@ -17,6 +17,7 @@
         <project.reporting.outputEncoding>UTF-8</project.reporting.outputEncoding>
 
         <spring.version>5.1.0.RELEASE</spring.version>
+        <spring-data-jpa.version>2.1.0.RELEASE</spring-data-jpa.version>
 
         <!-- Logging -->
         <logback.version>1.2.3</logback.version>
@@ -24,7 +25,7 @@
 
         <!--    Tests  -->
         <junit.version>4.12</junit.version>
-        
+
         <!-- Hibernate -->
         <hibernate.version>5.3.7.Final</hibernate.version>
         <hibernate-validator.version>6.0.13.Final</hibernate-validator.version>
@@ -80,14 +81,9 @@
 
         <!-- Spring -->
         <dependency>
-            <groupId>org.springframework</groupId>
-            <artifactId>spring-context</artifactId>
-            <version>${spring.version}</version>
-        </dependency>
-        <dependency>
-            <groupId>org.springframework</groupId>
-            <artifactId>spring-orm</artifactId>
-            <version>${spring.version}</version>
+            <groupId>org.springframework.data</groupId>
+            <artifactId>spring-data-jpa</artifactId>
+            <version>${spring-data-jpa.version}</version>
         </dependency>
 
         <!--DataBase-->
@@ -152,6 +148,7 @@
     </profiles>
 
     <dependencyManagement>
+
     </dependencyManagement>
 
 
