--- a/pom.xml
+++ b/pom.xml
@@ -9,7 +9,6 @@
     <version>1.0-SNAPSHOT</version>
 
     <name>Vote for lunch</name>
-    <!--<url>http://topjava.herokuapp.com/</url>-->
 
     <properties>
         <java.version>1.8</java.version>
@@ -30,6 +29,8 @@
         <hibernate.version>5.3.7.Final</hibernate.version>
         <hibernate-validator.version>6.0.13.Final</hibernate-validator.version>
         <javax-el.version>3.0.1-b10</javax-el.version>
+
+        <tomcat.version>9.0.12</tomcat.version>
     </properties>
 
     <build>
@@ -122,6 +123,13 @@
             <artifactId>jstl</artifactId>
             <version>1.2</version>
         </dependency>
+        <!-- https://mvnrepository.com/artifact/org.apache.tomcat/tomcat-servlet-api -->
+        <dependency>
+            <groupId>org.apache.tomcat</groupId>
+            <artifactId>tomcat-servlet-api</artifactId>
+            <version>${tomcat.version}</version>
+        </dependency>
+
 
         <!--Test-->
         <dependency>
