--- a/src/main/resources/app.properties
+++ b/src/main/resources/app.properties
@@ -1,4 +1,4 @@
-database.url=jdbc:hsqldb:file:D:/JAVA/voteforlunch_db/voteforlunch
+database.url=jdbc:hsqldb:mem:voteforlunchdb
 database.username=sa
 database.password=
 database.driverClassName=org.hsqldb.jdbcDriver
